# text-super-resolution

./: .gitignore  README.md  pyproject.toml
src/text_super_resolution/: evaluation.ipynb  gan_train.ipynb  train_model.ipynb
src/text_super_resolution/data_utils/: collect.py  dataset.py  downsample.py  utils.py
src/text_super_resolution/model/: ESRGAN.py  ResNetSR.py  UNet.py  utils.py
src/text_super_resolution/saved_models/resnetsr/: ckpt_17
